Fri Jan 23 08:03:58 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/POA/EndpointPolicy/run_test_dh.pl:
        * tests/POA/EndpointPolicy/run_test_lh.pl:
        * tests/POA/Explicit_Activation/run_test.pl:
        * tests/POA/Loader/run_test.pl:
        * tests/POA/On_Demand_Activation/run_test.pl:
        * tests/POA/On_Demand_Loading/run_test.pl:
        * tests/POA/Reference_Counted_Servant/run_test.pl:
        * tests/Portable_Interceptors/Redirection/run_test.pl:
          Made "fuzz" compliant.

Fri Jan 23 07:58:24 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3547_Regression/Stock_Quoter_Client.cpp:
          Destroy the orb before exiting

Fri Jan 23 06:39:24 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Cache_Entries.{inl,cpp}:
          Uninlined recycle_state it now calls the transport to get the
          id. The state will soon move to the transport.

Thu Jan 22 22:58:21 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * tao/CodecFactory/IOP_Codec_include.pidl:
        * tao/Compression/Compression_include.pidl:
        * tao/Monitor/Monitor_include.pidl:
        * tao/ObjRefTemplate/ObjectReferenceTemplate_include.pidl:
        * tao/PI/PI_include.pidl:
        * tao/PI_Server/PI_Server_include.pidl:
        * tao/PortableServer/PortableServer_include.pidl:
        * tao/RTCORBA/RTCORBA_include.pidl:
        * tao/RTPortableServer/RTPortableServer_include.pidl:
        * tao/RTScheduling/RTScheduler_include.pidl:

          Due to a feature of the Visual Age C++ preprocessor, files
          that do not have any non-preprocessor non-comment text in them
          will not have #line values emitted.  This causes a problem for
          tao_idl as it uses the #line text to determine which include files
          to place in the generated files.  Not having the correct include
          files in the generated C++ files may cause compilation errors.  In