@@ -11,21 +11,23 @@ use lib "$ENV{ACE_ROOT}/bin";
 use PerlACE::TestTarget;
 
 my $server = PerlACE::TestTarget::create_target (1) || die "Create target 1 failed\n";
-my $client = PerlACE::TestTarget::create_target (2) || die "Create target 1 failed\n";
+my $client = PerlACE::TestTarget::create_target (2) || die "Create target 2 failed\n";
 
-my $server_iorbase = "test1.ior";
-my $client_iorbase = "test2.ior";
+my $iorbase1 = "test1.ior";
+my $iorbase2 = "test2.ior";
 
-my $server_iorfile = $server->LocalFile ($server_iorbase);
-my $client_iorfile = $client->LocalFile ($client_iorbase);
+my $server1_iorfile = $server->LocalFile ($iorbase1);
+my $server2_iorfile = $server->LocalFile ($iorbase2);
+my $client1_iorfile = $client->LocalFile ($iorbase1);
+my $client2_iorfile = $client->LocalFile ($iorbase2);
 
-$server->DeleteFile ($server_iorbase);
-$client->DeleteFile ($client_iorbase);
+$server->DeleteFile ($iorbase1);
+$server->DeleteFile ($iorbase2);
+$client->DeleteFile ($iorbase1);
+$client->DeleteFile ($iorbase2);
 
-my $SV = $server->CreateProcess ("server", "-o $server_iorfile -o $client_iorfile");
-
-
-my $CL = $server->CreateProcess ("client", "-k file://$server_iorfile -k file://$client_iorfile");
+my $SV = $server->CreateProcess ("server", "-o $server1_iorfile -o $server2_iorfile");
+my $CL = $client->CreateProcess ("client", "-k file://$client1_iorfile -k file://$client2_iorfile");
 
 $status = 0;
 
@@ -33,16 +35,16 @@ print STDERR "\n\n==== Running PortableInterceptor::ForwardRequest test\n";
 
 $SV->Spawn ();
 
-if ($server->WaitForFileTimed ($server_iorbase,
+if ($server->WaitForFileTimed ($iorbase1,
                                $server->ProcessStartWaitInterval()) == -1) {
-    print STDERR "ERROR: cannot find file <$server_iorfile>\n";
+    print STDERR "ERROR: cannot find file <$server1_iorfile>\n";
     $SV->Kill (); $SV->TimedWait (1);
     exit 1;
 }
 
-if ($server->WaitForFileTimed ($client_iorbase,
+if ($server->WaitForFileTimed ($iorbase2,
                                $server->ProcessStartWaitInterval()) == -1) {
-    print STDERR "ERROR: cannot find file <$server_iorfile>\n";
+    print STDERR "ERROR: cannot find file <$server2_iorfile>\n";
     $SV->Kill (); $SV->TimedWait (1);
     exit 1;
 }
@@ -50,18 +52,20 @@ if ($server->WaitForFileTimed ($client_iorbase,
 $client_status = $CL->SpawnWaitKill ($client->ProcessStartWaitInterval());
 
 if ($client_status != 0) {
-    print STDERR "ERROR: client returned $client\n";
+    print STDERR "ERROR: client returned $client_status\n";
     $status = 1;
 }
 
 $server_status = $SV->WaitKill ($server->ProcessStopWaitInterval());
 
 if ($server_status != 0) {
-    print STDERR "ERROR: server returned $server\n";
+    print STDERR "ERROR: server returned $server_status\n";
     $status = 1;
 }
 
-$server->DeleteFile ($server_iorbase);
-$client->DeleteFile ($client_iorbase);
+$server->DeleteFile ($iorbase1);
+$server->DeleteFile ($iorbase2);
+$client->DeleteFile ($iorbase1);
+$client->DeleteFile ($iorbase2);
 
 exit $status;
